dr01-python-microservices6/k8s-test9/cast-fastapi.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: fastapi-dmj
---
# /home/cpa/Documents/CPA/44_JENKINS/DOC-REF/DR12-MEDIUM-DEVOPS-PART4/test/postgres/postgres-service.yaml
# DevOps Project — Part 4 / Dergham Lahcene /Dergham Lahcene; 8 min read; Feb 25, 2023
# https://medium.com/@l.dergham/devops-project-part-4-92d6641ed752
apiVersion: v1
kind: Service
metadata:
  name: postgres-cast-svc
  namespace: dev
spec:
  selector:
    app: postgres-cast-dep
  ports:
    - name: postgres-cast-port
      port: 5432
      targetPort: 5432
---
# /home/cpa/Documents/CPA/44_JENKINS/DOC-REF/DR12-MEDIUM-DEVOPS-PART4/test/postgres/postgres-deployment.yaml
## DevOps Project — Part 4 / Dergham Lahcene /Dergham Lahcene; 8 min read; Feb 25, 2023
# https://medium.com/@l.dergham/devops-project-part-4-92d6641ed752
# DevOps Project — Part 4 / Dergham Lahcene /Dergham Lahcene; 8 min read; Feb 25, 2023
# https://medium.com/@l.dergham/devops-project-part-4-92d6641ed752
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cast-db
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-cast
  template:
    metadata:
      labels:
        app: fastapi-cast
    spec:
      containers:
        - name: cast-db
          image: postgres
          ports:
            - containerPort: 5432
          livenessProbe:
            exec:
              command:
                - 'pg_isready -U  -d '
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-cast-vol
      volumes:
        - name: postgres-cast-vol
          persistentVolumeClaim:
            claimName: postgres-cast-vol
---
# /home/cpa/Documents/CPA/44_JENKINS/DOC-REF/DR12-MEDIUM-DEVOPS-PART4/test/fastapi/.fastapi-service.yaml
# DevOps Project — Part 4 / Dergham Lahcene /Dergham Lahcene; 8 min read; Feb 25, 2023
# https://medium.com/@l.dergham/devops-project-part-4-92d6641ed752
apiVersion: v1
kind: Service
metadata:
  name: fastapi-cast
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: fastapi-dep
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
---
# /home/cpa/Documents/CPA/44_JENKINS/DOC-REF/DR12-MEDIUM-DEVOPS-PART4/test/fastapi/.fastapi-deployment.yaml
# # DevOps Project — Part 4 / Dergham Lahcene /Dergham Lahcene; 8 min read; Feb 25, 2023
# https://medium.com/@l.dergham/devops-project-part-4-92d6641ed752
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: lahcenedergham/fastapi-image:latest
          ports:
            - containerPort: 5000
---
# Create an ingress object for it by copying the following manifest to a file and applying with kubectl apply -f thatfile.yaml
# Note: k3s deploys traefik as the default ingress controller
# https://k3d.io/v5.0.0/usage/exposing_services/
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: fastapi-nginx
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-nginx
  template:
    metadata:
      labels:
        app: fastapi-nginx
    spec:
      containers:
        - name: fastapi-nginx-ctnr
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: dev
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
---
